[package]
name = 'groupsign'
version = "0.0.1"
description = "FRAME pallet template for defining custom runtime logic."
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
homepage = "https://substrate.io/"
edition = '2018'
license = "Apache-2.0"
publish = false
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
sp-core = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.11' }
codec = { package = "parity-scale-codec", version = "2.3.1" }
scale-info = { version = "1.0" }

[dependencies]
codec = { package = "parity-scale-codec", version = "2.3.1", default-features = false }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
frame-support = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.11' }
frame-system = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.11' }

sp-io = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.11' }
sp-std = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.11' }
sp-core = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.11' }
sp-runtime = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.11' }

frame-benchmarking = { default-features = false, optional = true, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.11' }

[dev-dependencies]
sp-keystore = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.11' }

[features]
default = ['std']
std = [
	'codec/std',
	'scale-info/std',

	'frame-support/std',
	'frame-system/std',
	'frame-benchmarking/std',

    "sp-io/std",
    "sp-std/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-core/full_crypto",

]

runtime-benchmarks = [
	"frame-benchmarking",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
]

try-runtime = ["frame-support/try-runtime"]

