[package]
name = 'groupsign'
version = "0.0.1"
description = "The pallet to sign and execute dispatchable call using different signers immediately"
authors = ['Pontem Network']
edition = '2021'
license = "Apache2.0"
publish = false
repository = "https://github.com/pontem-network/pontem"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[target.'cfg(std)'.build-dependencies]
sp-core = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13', features = ["full_crypto"] }
codec = { package = "parity-scale-codec", version = "2.3.1", features = ["derive"] }
scale-info = { version = "1.0" }
frame-support = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13' }
frame-system = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13' }
sp-runtime = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13' }

[dependencies]
codec = { default-features = false , package = "parity-scale-codec", version = "2.3.1" }
scale-info = { default-features = false, version = "1.0", features = ["derive"] }
frame-support = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13' }
frame-system = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13' }

sp-io = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13' }
sp-std = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13' }
sp-core = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13' }
sp-runtime = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13' }
getrandom = { version = "0.2.3", optional = true }

frame-benchmarking = { default-features = false, optional = true, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13' }

[dev-dependencies]
sp-keystore = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.13' }

[features]
default = ['std']
std = [
	'codec/std',
	'scale-info/std',
	'frame-support/std',
	'frame-system/std',

    "sp-io/std",
    "sp-std/std",
    "sp-core/std",
    "sp-runtime/std",

	'frame-benchmarking/std',

    "getrandom/js",
]

runtime-benchmarks = [
	"frame-benchmarking",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
]

try-runtime = ["frame-support/try-runtime"]

