[package]
name = 'groupsign'
version = "0.0.1"
description = "The pallet to sign and execute dispatchable call using different signers immediately"
authors = ['Pontem Network']
edition = '2021'
license = "Apache2.0"
publish = false
repository = "https://github.com/pontem-network/pontem"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { default-features = false , package = "parity-scale-codec", version = "2.3.1" }
scale-info = { default-features = false, version = "1.0", features = ["derive"] }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.13' }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.13' }

sp-io = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.13' }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.13' }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.13' }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.13' }
getrandom = { version = "0.2.3", optional = true }

[dev-dependencies]
sp-keystore = { git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.13' }

[features]
default = ['std']
std = [
	'codec/std',
	'scale-info/std',
	'frame-support/std',
	'frame-system/std',

    "sp-io/std",
    "sp-std/std",
    "sp-core/std",
    "sp-runtime/std",

    "getrandom/js",
]

try-runtime = ["frame-support/try-runtime"]

