[package]
name = "parachain-staking"
version = "2.1.1"
authors = ["PureStake"]
edition = "2021"
description = "parachain staking pallet for collator selection and reward distribution"

[dependencies]
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18", default-features = false, optional = true }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18", default-features = false }
log = "0.4"
nimbus-primitives = { git = "https://github.com/pontem-network/nimbus", branch = "polkadot-v0.9.18", default-features = false }
parity-scale-codec = { version = "3.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0", optional = true }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18", default-features = false }
substrate-fixed = { default-features = false, git = "https://github.com/encointer/substrate-fixed" }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }

[dev-dependencies]
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18"}
similar-asserts = "1.1.0"
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }

[features]
default = ["std"]
std = [
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"nimbus-primitives/std",
	"parity-scale-codec/std",
	"serde",
	"sp-runtime/std",
	"sp-std/std",
	"scale-info/std",
]
runtime-benchmarks = ["frame-benchmarking"]
try-runtime = ["frame-support/try-runtime"]
